# fyf

./: .gitignore  MAIN.ipynb  README.md  precalcular_datos_para_horizontes.py  pyproject.toml  requirements.txt  streamlit_app.py  test_distributions_widget.ipynb
1_valores_cuota/: vcfD2010-2020.csv
2_avisos_cambio_fondos/: estrategias.py  fechas_anuncios.xlsx  test_estrategias.ipynb
3_simulador/: test_valores_cuota.ipynb  valores_cuota.py
4_comparador_estrategias/: comparador.py  test_comparador.ipynb
data_auxiliar/: crea_estrategia_optima.py  feriados.db  vcfA2010-2020.csv  vcfB2010-2020.csv  vcfC2010-2020.csv
processed_data/: db_habiles.db  optima_HABITAT.xlsx
raw_data/: anuncios.ff.xlsx  anuncios_ff.csv  anuncios_ff.xlsx  anuncios_ff_inversa.xlsx  vcfA2010-2020.csv  vcfA2010-2021.csv  vcfB2010-2020.csv  vcfB2010-2021.csv  vcfC2010-2020.csv  vcfC2010-2021.csv  vcfD2010-2020.csv  vcfD2010-2021.csv  vcfE2010-2020.csv  vcfE2010-2021.csv
src/: __init__.py  actualiza_habiles.py  crea_estrategia_optima.py  estrategias.py  parse_valores_cuota.py  plots.py  utils.py
test/: test_estrategia_optima.ipynb  test_estrategias.ipynb  test_valores_cuota.ipynb
