[tool.poetry]
name = "fyf"
version = "0.1.0"
description = "Análisis de retornos de AFP y Felices y Forrados"
authors = ["cd <cdagnino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.1"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
xlrd = "^2.0.1"
ipywidgets = "^7.6.3"
voila = "^0.2.6"
jupyter = "^1.0.0"
ipykernel = "^5.4.3"
openpyxl = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
